<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profileCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/imagePicker"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                >


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/circularImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/pictureCard"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        app:cardCornerRadius="50dp"
                        app:strokeColor="#000000"
                        app:strokeWidth="2dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/profilePicture"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_person"
                            android:contentDescription="@string/todo"
                            />

                    </com.google.android.material.card.MaterialCardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/buttonBackground"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/ic_vector"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" >

                    <ImageButton
                        android:id="@+id/buttonChangePicture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_camera"
                        android:padding="2dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:contentDescription="@string/todo"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>





            </androidx.constraintlayout.widget.ConstraintLayout>




            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="60dp"
                android:text="@string/profile_name"
                android:textSize="@dimen/profile_text"
                android:layout_marginStart="@dimen/text_margin"
                app:layout_constraintStart_toEndOf="@+id/imagePicker"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/textViewEmail"/>

            <TextView
                android:id="@+id/displayName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="@dimen/profile_text"
                android:layout_marginStart="@dimen/text_margin"
                app:layout_constraintBottom_toTopOf="@id/displayEmail"
                app:layout_constraintStart_toEndOf="@+id/textViewName"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="60dp"
                android:text="@string/profile_email"
                android:textSize="@dimen/profile_text"
                android:layout_marginStart="@dimen/text_margin"
                app:layout_constraintStart_toEndOf="@+id/imagePicker"
                app:layout_constraintTop_toBottomOf="@+id/textViewName"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <TextView
                android:id="@+id/displayEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="@dimen/profile_text"
                android:layout_marginStart="@dimen/text_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewEmail"
                app:layout_constraintTop_toBottomOf="@+id/displayName" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">


        <TextView
            android:id="@+id/textViewEmailID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_fragment"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@+id/buttonDeleteAccount"
        app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/buttonDeleteAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_danger"
            android:text="@string/delete_account"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogout"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>